# wisprtype

./: .gitignore  ISSUES.md  USER-STORY.md  index.html  landing.html  package-lock.json  package.json  pill.html  vite.config.ts
.cursor/agents/: api-designer.md  debugger.md  ui-designer.md
docs/: QA.md  RESOURCE_PROFILE.md
scripts/: stage-sidecars.ps1
src/: App.css  App.tsx  index.css  pill-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  settings.rs  system.rs
src-tauri/src/core/: audio.rs  dictionary.rs  engine.rs  history.rs  injection.rs  mod.rs  model_paths.rs  refinement.rs  settings.rs  stt.rs  worker.rs
src-tauri/src/core/stt/: backends.rs  cloud.rs  mod.rs  model_manager.rs  prompting.rs
src/components/: Pill.css  Pill.tsx
src/hooks/: useCoreEvents.ts
src/pages/: Settings.css  Settings.tsx
src/store/: settingsStore.ts
