[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0" }
tauri-plugin-log = "2"
cpal = "0.15.2"
whisper-rs = "0.11.1"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.36", features = ["full"] }
clipboard-win = "5.3.0"
global-hotkey = "0.3.0"
windows = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }
llama-cpp-2 = "0.1.146"
