[package]
name = "wisprflow"
version = "0.1.0"
description = "wisprflow for Windows"
authors = ["OpenAI Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "wisprflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[features]
default = ["cpu"]
cpu = []
cuda = ["stt-engine", "whisper-rs/cuda"]
stt-engine = ["dep:whisper-rs"]
refinement-engine = ["dep:llama-cpp-2", "dep:encoding_rs"]

[[bin]]
name = "wisprflow"
path = "src/main.rs"

[[bin]]
name = "wisprtype-stt-worker"
path = "src/bin/stt_worker.rs"
required-features = ["stt-engine"]

[[bin]]
name = "wisprtype-refinement-worker"
path = "src/bin/refinement_worker.rs"
required-features = ["refinement-engine"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["tray-icon", "image-ico"] }
tauri-plugin-log = "2"
cpal = "0.15.2"
whisper-rs = { version = "0.16.0", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.36", features = ["full"] }
clipboard-win = "5.3.0"
global-hotkey = "0.3.0"
windows = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Security_Credentials", "Win32_System_Registry", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
llama-cpp-2 = { version = "0.1.146", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
rusqlite = { version = "0.32.1", features = ["bundled"] }
